# clangd-cli

./: .gitignore  README.md  pyproject.toml
clangd_cli/: cli.py  constants.py  daemon.py  diagnostics_cache.py  errors.py  formatters.py  install.py  lsp_client.py  session.py  uri.py
clangd_cli/commands/: __init__.py  analysis.py  composite.py  navigation.py  structure.py  symbols.py
clangd_cli/models/: __init__.py  analysis.py  common.py  composite.py  daemon.py  install.py  navigation.py  structure.py  symbols.py
clangd_cli/templates/: clangd-cli-config.json  claude-hook-pretooluse.py  claude-md-section.md  claude-rules-cpp-nav.md  claude-skill-investigation.md  claude-skill-reference.md  claude-skill.md  copilot-cpp-nav.md  copilot-instructions.md
docs/: compile_commands_json_guide.md  forward_slice_automation.md  impact_analysis_guide.md
tests/: test_output.py
